@@ -61,6 +61,7 @@ exportMethods(nSamples)
 exportMethods(orderSamples)
 exportMethods(plotBarplot)
 exportMethods(plotClusters)
+exportMethods(plotClustersWorkflow)
 exportMethods(plotCoClustering)
 exportMethods(plotContrastHeatmap)
 exportMethods(plotDendrogram)
